Подключил DI Koin Подключил Realtime Database Добавил список отображающий давление и пульс пользователя в списке, разделенным по дням и часам

--- a/app/src/main/res/layout/item_indication.xml
+++ b/app/src/main/res/layout/item_indication.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="16dp">
+    android:padding="16dp">
 
     <TextView
         android:id="@+id/indication_time"
@@ -55,11 +55,11 @@
         android:id="@+id/indication_pulse"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:drawableStart="@drawable/ic_heart"
-        android:drawableTint="#4C4C4C"
         android:paddingHorizontal="20dp"
         android:textSize="20sp"
         android:textStyle="bold"
+        app:drawableStartCompat="@drawable/ic_heart"
+        app:drawableTint="#4C4C4C"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
